// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatMessage Credential offer renders correctly 1`] = `
<View
  style={
    Object {
      "marginBottom": 8,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#313132",
          "borderColor": "#42803E",
          "borderRadius": 12,
          "borderWidth": 1,
          "maxWidth": 320,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "padding": 12,
          }
        }
      />
      <View
        accessibilityLabel="Chat.ViewOffer"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          Object {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 44,
            "left": 44,
            "right": 44,
            "top": 44,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#42803E",
            "justifyContent": "center",
            "opacity": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          }
        }
        testID="com.ariesbifold:id/Chat.ViewOffer"
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              Object {
                "color": "#FFFFFF",
                "fontSize": 16,
                "fontWeight": "600",
              },
            ]
          }
        >
          Chat.ViewOffer
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginTop": 4,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 18,
            "fontWeight": "normal",
          },
          Object {
            "color": "#D3D3D3",
            "fontSize": 12,
            "marginBottom": 0,
            "marginTop": 8,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`ChatMessage Proof request renders correctly 1`] = `
<View
  style={
    Object {
      "marginBottom": 8,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#313132",
          "borderColor": "#42803E",
          "borderRadius": 12,
          "borderWidth": 1,
          "maxWidth": 320,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "padding": 12,
          }
        }
      />
      <View
        accessibilityLabel="Chat.ViewRequest"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          Object {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 44,
            "left": 44,
            "right": 44,
            "top": 44,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#42803E",
            "justifyContent": "center",
            "opacity": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          }
        }
        testID="com.ariesbifold:id/Chat.ViewRequest"
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              Object {
                "color": "#FFFFFF",
                "fontSize": 16,
                "fontWeight": "600",
              },
            ]
          }
        >
          Chat.ViewRequest
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginTop": 4,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 18,
            "fontWeight": "normal",
          },
          Object {
            "color": "#D3D3D3",
            "fontSize": 12,
            "marginBottom": 0,
            "marginTop": 8,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`ChatMessage Sent presentation renders correctly 1`] = `
<View
  style={
    Object {
      "marginBottom": 8,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#313132",
          "borderColor": "#42803E",
          "borderRadius": 12,
          "borderWidth": 1,
          "maxWidth": 320,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "padding": 12,
          }
        }
      />
      <View
        accessibilityLabel="Chat.OpenPresentation"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          Object {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 44,
            "left": 44,
            "right": 44,
            "top": 44,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#42803E",
            "justifyContent": "center",
            "opacity": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          }
        }
        testID="com.ariesbifold:id/Chat.OpenPresentation"
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              Object {
                "color": "#FFFFFF",
                "fontSize": 16,
                "fontWeight": "600",
              },
            ]
          }
        >
          Chat.OpenPresentation
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginTop": 4,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 18,
            "fontWeight": "normal",
          },
          Object {
            "color": "#D3D3D3",
            "fontSize": 12,
            "marginBottom": 0,
            "marginTop": 8,
          },
        ]
      }
    />
  </View>
</View>
`;
